# manipulator-control-ros

./: README.md
kuka_lbr_iiwa_control/: CMakeLists.txt  package.xml
kuka_lbr_iiwa_control/include/kuka_lbr_iiwa_control/: iiwa_controller.h
kuka_lbr_iiwa_control/launch/: effort_ff_controller.launch  gravity_controller.launch  send_gravity_msg.launch  set_default_pose.launch  set_default_pose_t.launch
kuka_lbr_iiwa_control/scripts/: send_gravity_msg.py  set_default_pose.py
kuka_lbr_iiwa_control/src/: iiwa_controller.cpp  main.cpp
kuka_lbr_iiwa_detector/: CMakeLists.txt  package.xml
kuka_lbr_iiwa_detector/include/kuka_lbr_iiwa_detector/: kuka_lbr_iiwa_detector.h
kuka_lbr_iiwa_detector/launch/: marker_detector.launch
kuka_lbr_iiwa_detector/src/: kuka_lbr_iiwa_detector.cpp  main.cpp
kuka_lbr_iiwa_gazebo/: CMakeLists.txt  package.xml
kuka_lbr_iiwa_gazebo/launch/: kuka_world.launch  sim_control.launch  sim_control_cv.launch
kuka_lbr_iiwa_gazebo/sdf/marker3/: model.config  model.sdf
kuka_lbr_iiwa_gazebo/sdf/marker3/materials/scripts/: marker3.material
kuka_lbr_iiwa_gazebo/sdf/marker3/meshes/: marker.dae
kuka_lbr_iiwa_gazebo/urdf/: lbr_iiwa.gazebo  lbr_iiwa_cameras.gazebo  lbr_iiwa_links.gazebo  lbr_iiwa_macros.gazebo  lbr_iiwa_plugins.gazebo  lbr_iiwa_properties.xacro
kuka_lbr_iiwa_gazebo/worlds/: cv-markers.world
kuka_lbr_iiwa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  rviz.config.rviz
kuka_lbr_iiwa_moveit_config/config/: fake_controllers.yaml  kuka_lbr_iiwa_14_r820.srdf  kuka_tr_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml
kuka_lbr_iiwa_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kuka_lbr_iiwa_14_r820_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kuka_lbr_iiwa_support/: LICENSE  package.xml
kuka_lbr_iiwa_support/config/: config.rviz  kuka_servo_config.yaml  kuka_tr_control.yaml  kuka_trg_control.yaml
kuka_lbr_iiwa_support/launch/: control_tr_lbr_iiwa_14_r820.launch  control_trg_lbr_iiwa_14_r820.launch  rviz.launch  test_lbr_iiwa_14_r820.launch
kuka_lbr_iiwa_support/urdf/: lbr_iiwa_14_r820_macro.xacro
