<?xml version="1.0"?>
<package format="2">
  <name>kuka_lbr_iiwa_gazebo</name>
  <version>0.0.1</version>
  <description>
    The kuka_lbr_iiwa_gazebo package contains files for Gazebo simulation support
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <author email="rinat.nazarovv@gmail.com">Rinat Nazarov</author>
  <maintainer email="rinat.nazarovv@gmail.com">Rinat Nazarov</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>gazebo_ros</build_depend> -->
  <!-- <build_export_depend>gazebo_ros</build_export_depend> -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>kuka_lbr_iiwa_support</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/sdf" /> 
  </export>
</package>
